# kafe

./: .gitignore  CHANGELOG  CMakeLists.txt  CONTRIBUTING.md  DOWNLOAD.md  Makefile  README.md  SECURITY.md  build-dist-docker-clean.sh  build-dist-macos.sh  build-dist.sh  publish.sh
.github/ISSUE_TEMPLATE/: bug_report.md
cli/: CMakeLists.txt  logger.cpp  logger.hpp  main.cpp  main.hpp
cmake/Modules/: FindFilesystem.cmake  FindLIBGIT2.cmake  FindLIBSSH.cmake  GNUInstallDirs.cmake
docs/: SCRIPTING_API_L1.md
examples/: deploy.lua  deploy_from_git.lua  kafe.make
libkafe/: CMakeLists.txt
libkafe/include/kafe/: context.hpp  execution_scope.hpp  logging.hpp  make.hpp  project.hpp  version.hpp
libkafe/include/kafe/io/: archive.hpp  file_system.hpp  tty.hpp
libkafe/include/kafe/local/: local_api.hpp
libkafe/include/kafe/pipeline/: pipeline.hpp
libkafe/include/kafe/project/: inventory.hpp  tasks.hpp
libkafe/include/kafe/remote/: ssh_api.hpp  ssh_manager.hpp  ssh_pool.hpp  ssh_session.hpp
libkafe/include/kafe/runtime/: runtime_exception.hpp
libkafe/include/kafe/scripting/: luainc.hpp  script.hpp
libkafe/src/: context.cpp  execution_scope.cpp  make.cpp  project.cpp
libkafe/src/io/: archive.cpp  file_system.cpp
libkafe/src/local/: local_api.cpp
libkafe/src/pipeline/: pipeline.cpp
libkafe/src/project/: inventory.cpp  tasks.cpp
libkafe/src/remote/: ssh_api.cpp  ssh_manager.cpp  ssh_pool.cpp  ssh_session.cpp
libkafe/src/runtime/: runtime_exception.cpp
libkafe/src/scripting/: script.cpp
packaging/: COPYRIGHT
